# openalpr

./: conanfile.txt
src/: CMakeLists.txt
src/openalpr/: CMakeLists.txt
